--- a/poster.Rmd
+++ b/poster.Rmd
@@ -22,18 +22,22 @@ output:
     template: template/template.html
     css: poster.css
     md_extensions: -autolink_bare_uris # disable autolinking URLs
-    highlight: rstudio
+    highlight: tango
+    fig_caption: false
 ---
+
+```{r xariganExtra, echo=FALSE}
+xaringanExtra::use_extra_styles(
+  hover_code_line = TRUE,
+  mute_unhighlighted_code = TRUE
+)
+```
 
 # Overview
 
-```{r}
-plot(cars, pch = 18)
-```
-
 `simChef` is a powerful framework for designing, documenting, and deploying simulation experiments in R.
 
-Main goals:
+**Goals:**
 
 - Provide an intuitive grammar of simulation experiments.
 - Reduce the startup time and boilerplate code needed to create simulations.
@@ -63,6 +67,46 @@ experiment <- create_experiment() %>%
     method = method1,
     lambda = c(0.1, 0.5, 1.0)
   )
+
 results <- experiment %>%
   run_experiment()
 ```
+
+# Interactive documentation
+
+![Interactive R Markdown simulation documentation](imgs/simchef.gif)
+
+# Parallelized simulations
+
+## TODO: add simChef logo + future
+<img class="future" src="imgs/future.png" alt="R package future hex logo"><p class="future-right">
+
+```{r, eval=FALSE}
+library(future)
+n_workers <- availableCores()
+plan(multisession, workers = n_workers)
+
+results <- experiment %>%
+  run_experiment(n_reps = 200,
+                 save = TRUE)
+```
+```
+Fitting empirical-fdr-comparison...
+Saving fit results...
+Fit results saved | time taken: 0.252786 seconds
+200 reps completed (totals: 200/200) | time taken: 17.675338 minutes
+==============================
+```
+
+Other helpful features:
+
+- Simulation checkpointing every $N$ replicates
+- Only compute new parts when adding DGPs / Methods / parameters / additional reps
+- Recover partial results and inspect errors when one part of the experiment fails
+
+# Roadmap
+
+- Nested parallelism
+- A sibling package library of flexible and modular DGPs
+- Ongoing usability improvements
+- Submit issues and feature requests [on GitHub](https://github.com/Yu-Group/simChef/issues)!
